webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.css
/*
 *Copyright 2018 T Mobile, Inc. or its affiliates. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
 * this file except in compliance with the License. A copy of the License is located at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * or in the "license" file accompanying this file. This file is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
 * implied. See the License for the specific language governing permissions and
 * limitations under the License.
 */

.contextual-menu-wrapper {
    background-color: var(--background-white);
    height: 100vh;
    border-right: 1px solid var(--border-200);
}

.know-your-app-content {
    display: ruby !important;
    font-family: var(--text-medium-font-family);
    font-style: normal;
    font-weight: var(--text-font-weight);
    font-size: var(--text-body-2-font-size);
    line-height: var(--text-line-height);
    color: var(--text-medium-emphasis);
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 0 16px 0 12px;
}

.icon {
    float: left;
    padding-top: 2px;
}

.node-img {
    padding: 14px 16px;
    min-width: 48px;
    filter: invert(49%) sepia(6%) saturate(379%) hue-rotate(177deg) brightness(92%) contrast(87%);
}

.asset-switcher-container {
    padding: 16px;
}

.node-wrapper-active {
    border-radius: 4px;
    background-color: var(--primary-100);
    color: var(--primary-500);
}

.node-wrapper-active .node-img {
    filter: invert(24%) sepia(73%) saturate(2569%) hue-rotate(186deg) brightness(78%) contrast(111%);
}

.is-collapsed {
    display: none;
}

.know-your-app-wrapper {
    background-color: var(--background-white);
    cursor: pointer;
    padding: 0 16px;
    display: flex;
    flex-direction: row;
}

.app-wrapper {
    padding: 16px 0;
}

.version-wrapper {
    padding: 8px 0;
    display: flex;
    flex-direction: row;
    margin: 0 16px;
    gap: 6px;
    border-top: 1px solid var(--border-200);
}

.version-wrapper.collapsed {
    gap: 2px;
}

.version-text {
    display: flex !important;
    font: var(--text-body-2);
    color: var(--text-low-emphasis);
    overflow: hidden;
    padding-left: 16px;
}

.version-text.collapsed {
    padding-left: 2px;
}

.version-number {
    display: flex !important;
    font: var(--text-body-2);
    color: var(--text-low-emphasis);
}

nav {
    height: calc(100vh - 245px);
    overflow-y: auto;
    overflow-x: hidden;
    margin-left: 16px;
    padding-right: 16px;
    font-family: var(--text-medium-font-family);
    font-size: var(--text-body-2-font-size);
    font-weight: var(--text-font-weight);
    color: var(--text-medium-emphasis);
}

.tree-item,
.tree-child-item {
    font-family: var(--text-medium-font-family);
    border-radius: 4px;
}

.tree-child-wrapper {
    margin-left: 22px;
    border-left: 2px solid var(--border-200);
}

.tree-child-item {
    margin-left: 25px;
    padding: 17px 16px 17px 0;
}

.tree-child-item:hover,
.tree-item:hover {
    background-color: var(--neutral-100);
    cursor: pointer;
}

.tree-child-item span,
.tree-item span {
    padding: 17px 0 17px 12px;
}

.tree-item.collapsed span {
    padding-left: 17px;
}

.tree-expand-icon {
    margin: 0 16px 0 auto;
    color: var(--text-low-emphasis);
}

